# grocery_manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  SYNC.md  TESTPLAN.md  compose.dev.yml  compose.yml
.github/workflows/: deploy.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  events.py  main.py  models.py  security.py  seed.py  shopping_logic.py
backend/app/api/: auth.py  categories.py  deps.py  invites.py  kitchens.py  legal.py  locations.py  named_lists.py  products.py  schemas.py  shopping.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 4b5d683a1555_init.py  a4c7e93b15d2_stock_current_package.py  b2f4c1a9d3e7_managed_locations.py  c3a7e1f29b41_split_stock.py  d5e8f2a1c9b3_user_language.py  e7a1c4d82f56_kitchens.py  f3b9d2e61a07_kitchen_invites.py
backend/tests/: conftest.py  test_auth.py  test_auto_list.py  test_categories_users.py  test_events.py  test_kitchens.py  test_legal.py  test_locations.py  test_products.py  test_trip.py  util.py
frontend/: angular.json  eslint.config.js  ngsw-config.json  package-lock.json  package.json
frontend/public/: manifest.webmanifest
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts  models.ts
frontend/src/app/components/: account-invites.ts  conflict-dialog.ts  editable-list.ts  invite-dialog.ts  kitchen-manager.ts  language-selector.ts  stock-meter.ts
frontend/src/app/guards/: auth-guard.ts  (+2 more)
scripts/: dev-reset.sh  dev-restart.sh  dev-start.sh  dev-stop.sh
(+32 files in other folders)
