[project]
name = "grocery-manager"
version = "0.1.0"
description = "Grocery Manager backend — FastAPI + SQLModel, serves the built Angular SPA."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.uv]
# Application, not a library: just resolve/install the dependencies above.
package = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
